# speedymf

./: LICENSE  README.md  pyproject.toml
speedymf/: CoKriging.ipynb  FSHyperkriging.ipynb  FlameSpeedHyperkriging.ipynb  Hyperkriging.ipynb  KennedyOHagan.ipynb  MFNest.ipynb  NARGP.ipynb  StochasticHyperkriging.ipynb  TestNB.ipynb  __init__.py  gplib.py  speedymf.py  util.py
speedymf/data/: FlameSpeedData1050.pkl  FlameSpeedData1150.pkl  FlameSpeedData1250.pkl  FlameSpeedData450.pkl  FlameSpeedData550.pkl  FlameSpeedData650.pkl  FlameSpeedData750.pkl  FlameSpeedData850.pkl  FlameSpeedData950.pkl
