[project]
name = "gaussianprocess"            # what users will pip install
version = "0.1.0"
description = "High-Performance Library for Gaussian Processes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Atticus Rex", email = "atticusd1@gmail.com" }
]
dependencies = [
    "tqdm", "jax"
]                     # list of runtime dependencies

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"